# vr2ar-converter

./: .gitignore  CMakeLists.txt  README.md  flake.nix
docs/: FFmpeg.md  HereSphere.md
src/: vr2ar-converter.cpp
utils/: convet.py
